--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,7 @@ img {
 .button-primary {
   min-width: 139px;
   padding: 12px 32px;
+  font-size: 16px;
   line-height: 20px;
   font-weight: 700;
   color: #2D3440;
@@ -89,6 +90,7 @@ img {
 .button-secondary {
   min-width: 88px;
   padding: 12px 32px;
+  font-size: 16px;
   line-height: 20px;
   font-weight: 700;
   color: #fcfcfc;
@@ -117,7 +119,7 @@ img {
 
 .page-header {
   display: flex;
-  padding: 24px 0;
+  padding: 24px 0 38px 0;
   align-items: center;
 }
 
@@ -142,7 +144,6 @@ img {
 
 .header-wrapper {
   display: flex;
-  max-width: 450px;
   margin-left: auto;
 }
 
@@ -150,7 +151,7 @@ img {
 
 .header-phone {
   align-self: center;
-  margin-right: 16px;
+  margin-right: 19px;
   line-height: 20px;
   font-weight: 700;
   text-decoration: none;
@@ -165,19 +166,34 @@ img {
 }
 
 .search-button {
+  position: relative;
   width: 27px;
   height: 27px;
-  margin-right: 16px;
+  margin-right: 19px;
   background-color: rgba(252, 252, 252, 0.3);
   border-radius: 50%;
   border: none;
   cursor: pointer;
 }
 
+.search-button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 27px;
+  height: 27px;
+  transform: translate(-50%, -50%);
+  background-image: url('../images/search.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* Log-in */
 
 .login-button,
 .basket-button {
+  position: relative;
   min-width: 88px;
   margin-right: 16px;
   padding: 6px 16px;
@@ -190,27 +206,57 @@ img {
   cursor: pointer;
 }
 
+.login-button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 19%;
+  width: 13px;
+  height: 13px;
+  transform: translate(-50%, -50%);
+  background-image: url('../images/login.svg');
+  background-repeat: no-repeat;
+}
+
 /* Basket */
 
 .basket-button {
   min-width: 115px;
+  margin-right: 0;
+}
+
+.basket-button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  width: 15px;
+  height: 14px;
+  transform: translate(-50%, -50%);
+  background-image: url('../images/basket.svg');
+  background-repeat: no-repeat;
 }
 
 /* Main */
 
-.main-container{
+.main-container {
   flex-grow: 1;
 }
 
 /* Slider */
 
+.slider {
+  position: relative;
+  padding-bottom: 40px;
+}
+
 .slider-slide {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 560px 1fr;
 }
 
 .slider-content {
-  padding: 136px 10px 138px 70px;
+  padding: 118px 27px 114px 70px;
 }
 
 .slider-title {
@@ -230,6 +276,23 @@ img {
   color: #2D3440;
 }
 
+.slider-img {
+  position: relative;
+}
+
+.slider-img::before {
+  position: absolute;
+  content: "";
+  width: 312px;
+  height: 312px;
+  top: 50%;
+  left: 26%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: #ffcbd8;
+  z-index: -1;
+}
+
 .slider-link {
   display: inline-block;
   text-decoration: none;
@@ -239,11 +302,31 @@ img {
 /* Slider buttons */
 
 .slider-button {
+  position: absolute;
+  top: 255px;
   width: 38px;
   height: 38px;
   border-radius: 50%;
   background-color: rgba(252, 252, 252, 0.3);
   border: 2px solid #fcfcfc;
+}
+
+.previous-slide {
+  top: 45%;
+  left: 48%;
+  transform: translate(-50%, -53%) rotate(180deg);
+  background-image: url('../images/slider-arrow.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.next-slide {
+  top: 45%;
+  transform: translate(-33%, -53%);
+  left: 74%;
+  background-image: url('../images/slider-arrow.svg');
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Slider pagination */
@@ -254,11 +337,20 @@ img {
   border-radius: 50%;
   border: none;
   background-color: #fcfcfc;
+  opacity: 0.3;
+}
+
+.slider-pagination-button.is-active {
+  background-color: #fcfcfc;
+  opacity: 1;
 }
 
 /* Social */
 
 .social-list {
+  position: absolute;
+  bottom: 40px;
+  right: 0;
   display: grid;
   grid-template-columns: repeat(3, 24px);
   gap: 16px;
@@ -271,11 +363,28 @@ img {
   display: block;
   width: 24px;
   height: 24px;
-  background-color: #fcfcfc;
   border-radius: 50%;
   box-shadow: 0 0 0 2px rgba(252, 252, 252, 0.3);
 }
 
+.tg-link {
+  background-image: url('../images/social-tg.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.vk-link {
+  background-image: url('../images/social-vk.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+.yt-link {
+  background-image: url('../images/social-yt.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 /* Promo */
 
@@ -285,7 +394,7 @@ img {
 
 .promo-title {
   margin: 0;
-  padding: 40px 368px 55px 368px;
+  padding: 0 368px 55px 368px;
   font-size: 32px;
   line-height: 46px;
   font-weight: 900;
@@ -349,9 +458,9 @@ img {
 
 .popular-img {
   position: absolute;
-  top: 15px;
+  top: 8px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(1.16);
 }
 
 .popular-list {
@@ -367,15 +476,14 @@ img {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 270px;
   margin: 0;
-  padding: 99px 0 0 0;
+  padding: 52px 0 0 0;
 }
 
 .popular-item-content {
   display: flex;
   flex-direction: column;
-  padding: 133px 40px 24px 40px;
+  padding: 133px 40px 20px 40px;
   background-color: #fcfcfc;
   border-radius: 8px;
 }
@@ -390,7 +498,7 @@ img {
 }
 
 .popular-item-subtitle {
-  margin: 0 0 16px 0;
+  margin: 0 0 19px 0;
   padding: 0;
   text-align: center;
 }
@@ -408,11 +516,24 @@ img {
 }
 
 .item-link {
+  position: relative;
   display: block;
   width: 32px;
   height: 32px;
   background-color: #ff2f64;
   border-radius: 50%;
+}
+
+.item-link::before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 15px;
+  height: 14px;
+  background-image: url('../images/basket-white.svg');
+  background-repeat: no-repeat;
 }
 
 /* Advantages*/
@@ -440,7 +561,7 @@ img {
 .advantages-list {
   display: grid;
   grid-template-columns: repeat(2, 505.5px);
-  gap: 32px;
+  gap: 38px 32px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -465,15 +586,16 @@ img {
 .blog-wrapper {
   padding: 32.5px 235px 67px 32px;
   background-image: url('../images/blog-bg.jpg');
-  background-position: -13px -103px;
+  background-position: -2px -103px;
   border-radius: 16px;
   background-size: 113%;
   background-color: #ffffff;
 }
 
-.blog-titile {
+.blog-title {
   margin: 0 0 12px 0;
   padding: 0;
+  font-size: 16px;
   line-height: 20px;
   font-weight: 400;
 }
@@ -490,7 +612,7 @@ img {
 /* Newsletter */
 
 .newsletter-wrapper {
-  padding: 26px;
+  padding: 32px;
   background-color: #ffffff;
   border-radius: 16px;
 }
@@ -500,12 +622,17 @@ img {
 }
 
 .newsletter-input {
-  width: 322px;
+  width: 332px;
   padding: 14px 16px;
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
   color: #b9b9b9;
+}
+
+.newsletter-button {
+  width: 152px;
+  margin-left: 13px;
 }
 
 /* Delivery */
@@ -517,12 +644,11 @@ img {
 .delivery-wrapper {
   display: grid;
   grid-template-columns: 460px 500px;
-  grid-template-rows: 406px;
   gap: 80px;
   padding: 64px;
   background-image: url('../images/delivery-bg.jpg');
   background-size: 105%;
-  background-position: 0 -140px;
+  background-position: -2px -142px;
   border-radius: 16px;
   background-color: #ffffff;
 }
@@ -552,7 +678,7 @@ img {
 }
 
 .delivery-info {
-  margin: 0 0 32px 0;
+  margin: 0 0 34px 0;
 }
 
 .delivery-label {
@@ -576,8 +702,13 @@ img {
   margin-bottom: 20px;
 }
 
+.date-label {
+  grid-row-start: 1;
+}
+
 .date-input {
   width: 117px;
+  grid-row-start: 2;
 }
 
 .phone-input {
@@ -600,13 +731,17 @@ img {
   grid-row-start: 2;
 }
 
+.delivery-button {
+  transform: translateX(93%);
+}
+
 /* Contacts */
 
 .contacts {
   padding: 64px;
   background-image: url('../images/contacts-bg.jpg');
   background-size: cover;
-  background-position: 0 -81px;
+  background-position: 0 -83px;
   border-radius: 16px;
 }
 
@@ -647,7 +782,7 @@ img {
 }
 
 .contacts-info-two {
-  margin: 0 0 24px 0;
+  margin: 0 0 29px 0;
   font-size: 14px;
 }
 
@@ -657,11 +792,54 @@ img {
 }
 
 /* Footer */
+
 .footer {
   display: grid;
   grid-template-columns: 220px 356px 220px;
   column-gap: 185px;
-  padding: 48px 0;
+  padding: 44px 0;
+}
+
+/* Footer social */
+
+.footer-social-list {
+  display: grid;
+  grid-template-columns: repeat(5, 24px);
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.footer-social-item {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-social-link {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px rgb(252 252 252 0.3);
+}
+
+.footer-social-tg {
+  background-image: url('../images/social-tg.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.footer-social-vk {
+  background-image: url('../images/social-vk.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.footer-social-yt {
+  background-image: url('../images/social-yt.svg');
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .info-wrapper {
@@ -672,12 +850,23 @@ img {
 }
 
 .info-title {
+  position: relative;
   margin: 0;
   padding-left: 24px;
   font-size: 14px;
   line-height: 20px;
   font-weight: 700;
   color: #2D3440;
+}
+
+.info-title::before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 13px;
+  top: 0;
+  left: 0;
+  background-image: url('../images/footer-heart.svg');
 }
 
 .info-link {
@@ -688,10 +877,23 @@ img {
   text-decoration: none;
 }
 
+/* Footer logo */
+
+.footer-logo {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.htmlacademy-icon {
+  transform: scale(1.21) translate(23px, 3px);
+}
+
 .footer-credits {
+  margin: 0;
   font-size: 12px;
   line-height: 16px;
   color: #2D3440;
+  transform: translateX(17px);
 }
 
 .footer-link {
@@ -707,7 +909,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 32px 0 16px 0;
+  padding: 26px 0 16px 0;
   list-style-type: none;
 }
 
@@ -722,7 +924,7 @@ img {
   color: #2D3440;
 }
 
-.catalog-ttitle {
+.catalog-title {
   margin: 0 0 40px 0;
   font-size: 32px;
   line-height: 46px;
@@ -739,7 +941,7 @@ img {
 }
 
 .filter-title {
-  margin: 0;
+  margin: 0 0 8px 0;
   padding: 0 0 0 16px;
   font-size: 14px;
   line-height: 20px;
@@ -759,7 +961,7 @@ img {
 
 .sorting-select {
   width: 196px;
-  padding: 8px 16px;
+  padding: 8px 10px;
   grid-row-start: 2;
   font-family: inherit;
   font-size: 14px;
@@ -824,11 +1026,8 @@ img {
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(4, 270px);
-  grid-template-rows:  repeat(3, 332px);
+  grid-template-rows: repeat(3, 332px);
   gap: 40px 30px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 .catalog-item {
@@ -839,9 +1038,9 @@ img {
 
 .catalog-img {
   position: absolute;
-  top: 15px;
+  top: 8px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(1.16);
 }
 
 .catalog-item-content {
@@ -851,7 +1050,7 @@ img {
 }
 
 .catalog-item-title {
-  margin:0 0 8px 0;
+  margin: 0 0 8px 0;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -859,12 +1058,12 @@ img {
   text-align: center;
 }
 
-.catalog-item-subtitle{
-  margin:0 0 16px 0;
+.catalog-item-subtitle {
+  margin: 0 0 20px 0;
   text-align: center;
 }
 
-.catalog-wrapper{
+.catalog-wrapper {
   display: flex;
   justify-content: space-between;
 }
@@ -876,7 +1075,7 @@ img {
   color: #2D3440;
 }
 
-.catalog-link{
+.catalog-link {
   width: 32px;
   height: 32px;
   background-color: #ff2f64;
@@ -890,7 +1089,7 @@ img {
 
 /* Pagination */
 
-.pagination-wrapper{
+.pagination-wrapper {
   display: flex;
   justify-content: space-between;
   padding: 41px 0 41px 487px;
