--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,7 @@ img {
   border-radius: 30px;
   background-color: rgba(252, 252, 252, 0.3);
   cursor: pointer;
+  z-index: 1;
 }
 
 .login-button::before {
@@ -1352,6 +1353,92 @@ login-popup-title {
 .footer-link {
   text-decoration: none;
   color: #2D3440;
+}
+
+/* Modal */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(45, 52, 64, 0.3);
+  display: none;
+}
+
+.modal-container.is-open {
+  display: flex;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 64px 66px 64px;
+  width: 570px;
+  background-color: #fcfcfc;
+  border-radius: 8px;
+  box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 45px;
+  right: 39px;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-close-button::before,
+.modal-close-button::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  width: 15px;
+  height: 1px;
+  background-color: #000000;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.modal-close-button::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.modal-title {
+  margin: 0 0 32px 0;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #2d3440;
+}
+
+.modal-input {
+  width: 442px;
+  padding: 14px 16px;
+  margin-bottom: 16px;
+  border-radius: 4px;
+  border: 1px solid #b9b9b9;
+}
+
+.modal-input::placeholder {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  color: #b9b9b9;
+}
+
+.modal-appeal {
+  min-height: 149px;
+  margin-bottom: 32px;
+}
+
+.modal-button {
+  margin-left: 292px;
 }
 
 /* Catalog */
